logo path change

--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
     <!-- Footer -->
     <div class="footer">
         <a class="footer_logo_container" href="#home">
-            <img class="footer_logo_img" src="../images/logo_tab.png" alt="logo">
+            <img class="footer_logo_img" src="images/logo_tab.png" alt="logo">
             <p class="footer_logo_text">NORMI</p>
         </a>
         <p class="copyright">Copyright © 2024 Normi Chen</p>
