update the percentage of programing language

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div class="language">
                     <i class="fa-brands fa-python"></i>
                     <div class="language_bar">
-                        <div class="python"><span>90%</span></div>
+                        <div class="python"><span>95%</span></div>
                     </div>
                 </div>
                 <div class="language">
@@ -95,7 +95,7 @@
                 <div class="language">
                     <i class="fa-brands fa-css3-alt"></i>
                     <div class="language_bar">
-                        <div class="css"><span>85%</span></div>
+                        <div class="css"><span>90%</span></div>
                     </div>
                 </div>
                 <div class="language">
@@ -321,7 +321,7 @@
                 <a href="blog/20240318_Exploring_Movement_Patterns_in_Mobile_Phone_Data_A_Matrix_Visualization_and_Clustering_Approach.html" target="_blank">Read <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
             </div>
             <div class="blog_card">
-                <p class="blog_card_title">Git / GitHub</p>
+                <p class="blog_card_title">How to Work with Git and GitHub</p>
                 <div class="time_author">
                     <p class="blog_time">2024-03-21</p>
                     <p class="author">Normi</p>
@@ -330,7 +330,7 @@
                     <span class="blog_tag" style="background-color: #E25A38; color: #F6F8FA;">Git</span>
                     <span class="blog_tag" style="background-color: #202328; color: #F6F8FA;">GitHub</span>
                 </div>
-                <a href="blog/20240321_Git_GitHub.html" target="_blank">Read <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                <a href="blog/20240321_How_to_Work_with_Git_and_GitHub.html" target="_blank">Read <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
             </div>
         </div>
     </div>
