for 20240717 bllog and some css update

--- a/index.html
+++ b/index.html
@@ -344,6 +344,18 @@
                 </div>
                 <a href="blog/20240701_Levels_of_Measurement_Understanding_the_Foundations_of_Data_Analysis.html" target="_blank">Read <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
             </div>
+            <div class="blog_card">
+                <p class="blog_card_title">How to Create an Interactive Dashboard with Google Sheets</p>
+                <div class="time_author">
+                    <p class="blog_time">2024-07-17</p>
+                    <p class="author">Normi</p>
+                </div>
+                <div class="blog_tags">
+                    <span class="blog_tag" style="background-color: #FAD7A0;">Visualization</span>
+                    <span class="blog_tag" style="background-color: #A9CCE3;">Data Analysis</span>
+                </div>
+                <a href="blog/20240717_How_to_Create_an_Interactive_Dashboard_with_Google_Sheets.html" target="_blank">Read <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            </div>
         </div>
     </div>
 
